CalendarPage on mobile version design fixes to have title and arrows on same line and add button its own line.

--- a/src/global.scss
+++ b/src/global.scss
@@ -364,6 +364,14 @@ ion-input {
   height: 100%;
 }
 
+.height-15 {
+  height: 15%;
+}
+
+.height-85 {
+  height: 85%;
+}
+
 .margin-bottom-10px {
   margin-bottom: 10px !important;
 }
